# cordova-supply-chain

./: MISMATCHES.md  README.md  decisions.md  package-lock.json  package.json
backend/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/core/: errors.py  logging.py  sse.py
backend/app/routers/: health.py  scan.py
backend/app/schemas/: health.py  scan.py
backend/app/services/: consensus.py  ela.py  identify.py  normalize.py  pipeline.py  references.py  sessions.py  stubs.py  verdict_cache.py  vlm.py
backend/tests/: conftest.py  test_capture_lifecycle.py  test_consensus.py  test_consensus_pipeline.py  test_ela.py  test_health.py  test_identify_pipeline.py  test_normalize.py  test_scan_contract.py  test_verdict_cache.py  test_vlm.py  test_vlm_pipeline.py
contract/: README.md  scan-pipeline.schema.json
src/app/: globals.css  layout.tsx  page.tsx
src/app/(app)/: layout.tsx
src/app/(auth)/: layout.tsx
src/app/(flow)/: layout.tsx
src/app/onboarding/: layout.tsx  page.tsx
src/components/custody/: AnomalyBanner.tsx  CustodyTimeline.tsx  JourneyMap.tsx  JourneyMapInner.tsx
src/components/dashboard/: ActivityFeed.tsx  ConsumerScanCta.tsx  InventoryTable.tsx  KpiCard.tsx  PendingShipments.tsx  RegulatorFeed.tsx  Sparkline.tsx  TopStrip.tsx
src/components/forensic/: AlignmentOverlay.tsx  ConfidenceGauge.tsx  ELAHeatmap.tsx  LiveBarcodeScanner.tsx  ScanForensicTrace.tsx  VLMComparison.tsx  VerdictCard.tsx
src/components/identity/: ForensicTrace.tsx  OnboardingStepRail.tsx  RoleCard.tsx  TrustScoreCard.tsx  VerificationRow.tsx
src/components/layout/: RoleSwitcher.tsx  RouteGuard.tsx  Sidebar.tsx  ThemeToggle.tsx  Topbar.tsx
src/components/providers/: Providers.tsx
src/components/risk/: AlertCard.tsx  InvestigationSheet.tsx  RiskMap.tsx  RiskMapInner.tsx  SuspendVendorModal.tsx
src/components/settlement/: LogicGatedButton.tsx  SettlementCard.tsx  TransferStateMachine.tsx
src/components/transactions/: CounterTile.tsx  EvidencePanel.tsx  TransactionsTable.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  FormField.tsx  Input.tsx  KBD.tsx  MonoText.tsx  PageHeader.tsx  Select.tsx  Skeleton.tsx
src/hooks/: use-ledger-scan.ts  use-scan-pipeline.ts  use-squad-wallet.ts  use-verification-stream.ts
src/lib/api/: client.ts  scan.ts  (+1 more)
src/stores/: auth.ts  custody-hover.ts  initiated-batches.ts  suspended-vendors.ts  theme.ts  wallet.ts
src/styles/: tokens.css
(+31 files in other folders)
