[project]
name = "aegis-forensic"
version = "0.1.0"
description = "Aegis forensic supply-chain backend — scan pipeline orchestration."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Aegis" }]

# Stage 0 dependency surface — the HTTP/SSE seam only. The heavy forensic
# libraries (opencv, pillow, anthropic, numpy) are declared as optional
# extras and installed in the build stages that need them, so a Stage 0
# install stays light and offline-friendly.
dependencies = [
  "fastapi>=0.115,<0.120",
  "uvicorn[standard]>=0.32,<0.40",
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.5,<3.0",
  "python-multipart>=0.0.12,<1.0",
  "sse-starlette>=2.1,<3.0",
  "httpx>=0.27,<1.0",
  "aiofiles>=24.1,<25.0",
]

[project.optional-dependencies]
# Stage 2 onwards needs OpenCV/Pillow/numpy. `make install` adds [forensic]
# automatically once Stage 2 is active; the pipeline gracefully falls back
# to the Stage-1 echo when these aren't importable.
forensic = [
  "opencv-python-headless>=4.10,<5.0",
  "pillow>=10.4,<12.0",
  "numpy>=1.26,<3.0",
]
vlm = ["anthropic>=0.40,<1.0"]
dev = [
  "ruff>=0.7,<1.0",
  "mypy>=1.11,<2.0",
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "pytest-httpx>=0.32,<1.0",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ─── Ruff ───────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E", "F", "W",   # pycodestyle / pyflakes
  "I",              # isort
  "B",              # bugbear
  "UP",             # pyupgrade
  "SIM",            # simplify
  "RUF",            # ruff-native
  "ASYNC",
]
ignore = ["E501"]   # line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ─── Mypy ───────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["sse_starlette.*"]
ignore_missing_imports = true

# ─── Pytest ─────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["error"]
